spectec/test/elab/neg/parse-variant-bar-no-cases.t
  $ ./main.exe parse-variant-bar-no-cases.spectec 2>&1
  error: empty variant type
    --> parse-variant-bar-no-cases.spectec:3:14
    |
  3 | syntax foo = |
    |              ^
    = source: parse
  [1]
